--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,18 @@
 asgiref==3.3.4
 autopep8==1.5.5
+certifi==2021.5.30
+chardet==4.0.0
 Django==3.2.4
 django-countries==7.2.1
+idna==2.10
+isort==5.8.0
+Pillow==8.2.0
 pycodestyle==2.6.0
 pytz==2021.1
+requests==2.25.1
 six==1.16.0
 sqlparse==0.4.1
+stripe==2.58.0
+stripe3==0.0.0
 toml==0.10.2
+urllib3==1.26.5
